<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/cafe_imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/caffe_image"
        android:src="@drawable/cafe" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cafe_imageView"
        app:layout_constraintLeft_toLeftOf="@id/cafe_imageView"
        app:layout_constraintRight_toRightOf="@id/cafe_imageView"
        app:layout_constraintBottom_toTopOf="@id/person_name_editText"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textSize="32dp"
        android:text="@string/wellcome" />

    <EditText
        android:id="@+id/person_name_editText"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintLeft_toLeftOf="@id/textView"
        app:layout_constraintRight_toRightOf="@id/textView"
        app:layout_constraintBottom_toTopOf="@id/person_password_editText"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/person_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/person_password_editText"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/person_name_editText"
        app:layout_constraintRight_toRightOf="@id/person_name_editText"
        app:layout_constraintLeft_toLeftOf="@id/person_name_editText"
        app:layout_constraintBottom_toTopOf="@id/order_cafe_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/person_password"  />

    <Button
        android:id="@+id/order_cafe_button"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/person_password_editText"
        app:layout_constraintLeft_toLeftOf="@id/person_password_editText"
        app:layout_constraintRight_toRightOf="@id/person_password_editText"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="clickCreatOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textStyle="bold"/>
</androidx.constraintlayout.widget.ConstraintLayout>