<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateOrderActivity">


    <TextView
        android:id="@+id/greeting_text_to_client_text_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/greeting_text_to_client"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioButton
        android:id="@+id/tea_radio_button"
        app:layout_constraintTop_toBottomOf="@id/greeting_text_to_client_text_view"
        app:layout_constraintLeft_toLeftOf="@id/greeting_text_to_client_text_view"
        app:layout_constraintRight_toLeftOf="@id/cafe_radio_button"
        app:layout_constraintBottom_toTopOf="@id/what_to_add_text_view"
        android:layout_marginTop="14dp"
        android:checked="true"
        android:onClick="onClickChangeDrink"
        android:text="@string/tea_radio_button_text"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <RadioButton
        android:id="@+id/cafe_radio_button"
        app:layout_constraintTop_toBottomOf="@id/greeting_text_to_client_text_view"
        app:layout_constraintRight_toRightOf="@id/greeting_text_to_client_text_view"
        app:layout_constraintLeft_toRightOf="@id/tea_radio_button"
        android:textStyle="bold"
        android:onClick="onClickChangeDrink"
        android:layout_marginTop="14dp"
        android:text="@string/cafe_radio_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <TextView
        android:id="@+id/what_to_add_text_view"
        app:layout_constraintTop_toBottomOf="@id/tea_radio_button"
        app:layout_constraintLeft_toLeftOf="@id/greeting_text_to_client_text_view"
        app:layout_constraintRight_toRightOf="@id/greeting_text_to_client_text_view"
        android:text="@string/what_to_added_your_order_text"
        app:layout_constraintBottom_toTopOf="@id/milk_check_box"
        android:textStyle="bold"
        android:layout_marginTop="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/sugar_check_box"
        android:text="@string/sugar_checkbox_text"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@id/what_to_add_text_view"
        app:layout_constraintLeft_toLeftOf="@id/greeting_text_to_client_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/milk_check_box"
        android:text="@string/milk_check_box_text"
        app:layout_constraintTop_toBottomOf="@id/what_to_add_text_view"
        app:layout_constraintLeft_toRightOf="@id/sugar_check_box"
        app:layout_constraintRight_toLeftOf="@id/lemon_check_box"
        app:layout_constraintBottom_toTopOf="@id/choose_the_type_drink_text_view"
        android:layout_marginTop="14dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/lemon_check_box"
        android:textStyle="bold"
        android:text="@string/lemon_check_box_text"
        app:layout_constraintTop_toBottomOf="@id/what_to_add_text_view"
        app:layout_constraintRight_toRightOf="@id/greeting_text_to_client_text_view"
        app:layout_constraintLeft_toRightOf="@id/milk_check_box"
        android:layout_marginTop="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/choose_the_type_drink_text_view"
        app:layout_constraintTop_toBottomOf="@id/milk_check_box"
        app:layout_constraintLeft_toLeftOf="@id/greeting_text_to_client_text_view"
        app:layout_constraintRight_toRightOf="@id/greeting_text_to_client_text_view"
        app:layout_constraintBottom_toTopOf="@id/choose_the_type_drink_tea_spinner"
        android:layout_marginTop="14dp"
        android:text="@string/choose_the_type_drink_text"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/choose_the_type_drink_tea_spinner"
        app:layout_constraintTop_toBottomOf="@id/choose_the_type_drink_text_view"
        app:layout_constraintLeft_toLeftOf="@id/greeting_text_to_client_text_view"
        app:layout_constraintRight_toRightOf="@id/greeting_text_to_client_text_view"
        app:layout_constraintBottom_toTopOf="@id/order_button"
        android:layout_margin="14dp"
        android:entries="@array/options_of_tea"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/choose_the_type_drink_coffee_spinner"
        app:layout_constraintTop_toBottomOf="@id/choose_the_type_drink_text_view"
        app:layout_constraintLeft_toLeftOf="@id/greeting_text_to_client_text_view"
        app:layout_constraintRight_toRightOf="@id/greeting_text_to_client_text_view"
        android:layout_margin="14dp"
        app:layout_constraintBottom_toTopOf="@id/order_button"
        android:entries="@array/options_of_coffee"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/order_button"
        app:layout_constraintTop_toBottomOf="@id/choose_the_type_drink_coffee_spinner"
        android:layout_margin="14dp"
        app:layout_constraintLeft_toLeftOf="@id/greeting_text_to_client_text_view"
        app:layout_constraintRight_toRightOf="@id/greeting_text_to_client_text_view"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/order"
        android:textStyle="bold"
        android:onClick="onClickSendOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


</androidx.constraintlayout.widget.ConstraintLayout>